--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="card">
         <h2>Perkenalan</h2>
 
-        <p><b>Mata Kuliah:</b> Bahasa Inggris</p>
+        <p><b>Mata Kuliah:</b>Pendidikan Kewarganegaraan</p>
         <p><b>Dosen Pengampu:</b>Feriel Amelia Sembiring, M.Sos</p>
 
         <p>
@@ -155,10 +155,11 @@
         <h2>Video Tugas</h2>
         <p>Berikut video tugas kami:</p>
 
-        <video controls>
-            <source src="video.mp4" type="video/mp4">
-            Browser Anda tidak mendukung video.
-        </video>
+       <video controls autoplay muted playsinline preload="metadata">
+    <source src="./video.mp4" type="video/mp4">
+    Browser Anda tidak mendukung pemutaran video.
+</video>
+
     </div>
 </section>
 
